# 202534-fa

./: README.md  pyproject.toml
notebooks/: lab02.qmd  lab03_hierarquica.qmd  lab03_timegpt.ipynb
scripts/: codigos_aula2.R  lab01_python.py  lab01_r.R
